tests/fixtures/valid/list/list_slice.py
# List slicing
lst: list[int] = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
print(lst[2:5])
print(lst[:3])
print(lst[7:])
print(lst[::2])
print(lst[1::2])
print(lst[::-1])
