tests/fixtures/invalid/pow_bytes_set_list.py
# Cannot call pow() with Bytes, Set[int], List[int]
x = pow(b"hello", {1, 2, 3}, [1, 2, 3])
